lib/queue-msg-macro/tests/unnamed-struct-multiple-types.rs
use queue_msg_macro::msg_struct;

#[msg_struct]
struct Unnamed(String, u16);

fn main() {}
